--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -337,8 +337,8 @@ footer {
     text-align: center;
   }
 
-  background: linear-gradient( transparent 10%, var(--light-header-background));
+  background: linear-gradient( rgba(255,255,255,0) 10%, var(--light-header-background));
   :global .dark-theme :local & {
-    background: linear-gradient( transparent 10%, var(--dark-header-background));
+    background: linear-gradient( rgba(255,255,255,0) 10%, var(--dark-header-background));
   }
 }
